src/styles/root.css
:root {
	--section-spacing: 1.25rem;
	--footer-blur-radius: 3px;
}

html,
body,
* {
	font-family: 'Inter', sans-serif !important;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	text-decoration: none !important;
	-webkit-transition: all 0.2s;
	-o-transition: all 0.2s;
	transition: all 0.2s;
}

body,
#__next {
	min-height: 100vh;
	background-color: var(--bg);
}

div._footer_div {
	width: 100%;
	text-align: center;
	border-top: 1px solid var(--light-gray);
	padding: 1rem;
	position: fixed;
	bottom: 0;
	background: var(--bg);
}

@supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
	div._footer_div {
		background-color: var(--bg-alpha);
		backdrop-filter: blur(var(--footer-blur-radius));
		-webkit-backdrop-filter: blur(var(--footer-blur-radius));
	}
}

p._footer_p {
	font-size: 0.75rem;
}

a._social_link,
a._email {
	color: var(--accent);
	text-decoration: none;
}

h1 {
	margin-top: var(--section-spacing);
	font-weight: 500;
	font-size: 1.5rem;
	color: var(--fg);
	text-align: center;
}

p {
	color: var(--muted);
}

._container {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	max-width: 32rem;
	margin: 0 auto;
	padding: 0rem 1rem;
}

._container_large {
	max-width: 40rem;
}

._section_hi {
	margin-top: 2rem;
}

._links {
	text-align: center;
	margin: 1rem 0rem;
}

._section_about p {
	margin: 1rem 0rem;
	font-weight: 300;
	line-height: 1.5rem;
}

b {
	font-weight: 500;
}

._grid {
	display: -ms-grid;
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
	grid-auto-rows: 1fr;
	gap: 0.75rem;
	margin-top: 1rem;
	margin-bottom: 4rem;
}

._card {
	border: 1px solid var(--light-gray);
	border-radius: 0.5rem;
	height: 100%;
	width: 100%;
	-webkit-transition: all 0.2s;
	-o-transition: all 0.2s;
	transition: all 0.2s;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	padding: 0.75rem 1rem;
}

._card:hover {
	-webkit-box-shadow: 0 2.3px 2.2px rgba(0, 0, 0, 0.014),
		0 6.4px 6px rgba(0, 0, 0, 0.02), 0 15.4px 14.5px rgba(0, 0, 0, 0.026),
		0 51px 48px rgba(0, 0, 0, 0.04);
	box-shadow: 0 2.3px 2.2px rgba(0, 0, 0, 0.014),
		0 6.4px 6px rgba(0, 0, 0, 0.02), 0 15.4px 14.5px rgba(0, 0, 0, 0.026),
		0 51px 48px rgba(0, 0, 0, 0.04);
}

._card * {
	padding: 0.25rem 0rem;
}

._card h2 {
	color: var(--fg);
}

._card p {
	font-size: 0.8rem;
	line-height: 1.25rem;
}

._footer_color_switch {
	cursor: pointer;
}

